--- a/GB-WEB/Webcontent/GB/app/layout/screens/modal/addSupplierModal.tmpl.html
+++ b/GB-WEB/Webcontent/GB/app/layout/screens/modal/addSupplierModal.tmpl.html
@@ -1,6 +1,6 @@
 <div -ng-controller="addModalCtr as vm">
         <div class="modal-header">
-            <h3 class="modal-title" id="modal-title">Add Order </h3>
+            <h3 class="modal-title" id="modal-title">Add Supplier </h3>
         </div>
         <div class="modal-body" id="modal-body">
             
