--- a/GB-WEB/Webcontent/GB/app/layout/header.tmpl.html
+++ b/GB-WEB/Webcontent/GB/app/layout/header.tmpl.html
@@ -17,19 +17,19 @@
             <div class="collapse navbar-collapse gb-nav-cnt" id="bs-example-navbar-collapse-1" style="margin: auto; width: 780px;">
                 <ul class="nav navbar-nav gb-navigation">
                     <li>
-                        <a href="#home">Store</a>
+                        <a href="#/home">Store</a>
                     </li>
                     <li>
-                        <a href="#billing">Billing</a>
+                        <a href="#/billing">Billing</a>
                     </li>
                     <li>
-                        <a href="#Review">Review</a>
+                        <a href="#/Review">Review</a>
                     </li>
                     <li>
-                        <a href="#employee">Employee</a>
+                        <a href="#/employee">Employee</a>
                     </li>
                     <li>
-                        <a href="#settings">Settings</a>
+                        <a href="#/settings">Settings</a>
                     </li>
                     <li>
                         <a href="#">About</a>
