--- a/GB-WEB/Webcontent/GB/app/layout/screens/billing/billing.tmpl.html
+++ b/GB-WEB/Webcontent/GB/app/layout/screens/billing/billing.tmpl.html
@@ -32,7 +32,7 @@
 					{
 					'animation': true,
                     'templateUrl': 'GB/app/layout/screens/modal/addSellOrder.tmpl.html',
-                    'size': 'md',
+                    'size': 'lg',
                     
 					}"/>
 				</th>
