--- a/GB-WEB/Webcontent/GB/app/layout/screens/modal/addSellOrder.tmpl.html
+++ b/GB-WEB/Webcontent/GB/app/layout/screens/modal/addSellOrder.tmpl.html
@@ -4,39 +4,39 @@
         </div>
         <div class="modal-body" id="modal-body">
             
-           <form name="Order">
-              <div class="form-group">
+           <form name="Order" class="row">
+              <div class="form-group col-lg-6 col-md-6">
                 <label for="customerName">Cutomer Name</label>
                 <input type="text" class="form-control" id="orderName" ng-model="vm.order.customerName" required>
               </div>
-              <div class="form-group">
+              <div class="form-group col-lg-6 col-md-6">
                 <label for="contactNo">Contact No</label>
                 <input type="number" class="form-control" id="contactNo" ng-model="vm.order.contactNo">
               </div>
-              <div class="form-group">
+              <div class="form-group col-lg-6 col-md-6">
                 <label for="address">Address</label>
                 <input type="text" class="form-control" id="address" ng-model="vm.order.address">
               </div>
-              <div class="form-group">
+              <div class="form-group col-lg-6 col-md-6">
                 <label for="Brand">Brand</label>
                 <select id="brand" ng-model="vm.order.brand" class="form-control" ng-options="brand.brandId as brand.brandName for brand in vm.brandDetail" ng-change="vm.changeBrand(vm.order.brand)"></select>
               </div>
-              <div class="form-group">
+              <div class="form-group col-lg-6 col-md-6">
                 <label for="Model">Model</label>
                 <select id="model" ng-model="vm.order.model" class="form-control" ng-options="model.modelId as model.modelName for model in vm.modelDetail"></select>
               </div>
-              <div class="form-group">
+              <div class="form-group col-lg-6 col-md-6">
                 <label for="imeiNo">IMEI No</label>
                 <input type="number" class="form-control" id="PurchasePrice" ng-model="vm.order.imeiNo" required>
               </div>
-              <div class="form-group">
+              <div class="form-group col-lg-6 col-md-6">
                 <label for="saleType">Sale Type</label>
                 <select id="brand" ng-model="vm.order.saleType" class="form-control">
                   <option value="Offline">Offline</option>
                   <option value="Online">Online</option>
                 </select>
               </div>
-              <div class="form-group">
+              <div class="form-group col-lg-6 col-md-6">
                 <label for="amount">Amount</label>
                  <input type="number" class="form-control" id="amount" ng-model="vm.order.amount">
               </div>
