--- a/GB-WEB/Webcontent/GB/app/layout/screens/modal/updateStockModal.tmpl.html
+++ b/GB-WEB/Webcontent/GB/app/layout/screens/modal/updateStockModal.tmpl.html
@@ -6,6 +6,10 @@
             
            <form name="Order" class="row">
               <div class="form-group col-lg-6 col-md-6">
+                <label for="orderId">Stock Id</label>
+                <input type="text" class="form-control" id="orderName" ng-model="vm.order.orderId" required ng-disabled="true">
+              </div>
+              <div class="form-group col-lg-6 col-md-6">
                 <label for="OrderName">Order Name</label>
                 <input type="text" class="form-control" id="orderName" ng-model="vm.order.orderName" required>
               </div>
@@ -15,12 +19,14 @@
               </div>
               <div class="form-group col-lg-6 col-md-6">
                 <label for="Brand">Brand</label>
-                <!-- <input type="text" class="form-control" id="brand" ng-model="vm.order.brand"> -->
                 <select id="brand" ng-model="vm.order.brand" class="form-control" ng-options="brand.brandId as brand.brandName for brand in vm.brandDetail" ng-change="vm.changeBrand(vm.order.brand)"></select>
+               <!--  <input type="text" class="form-control" id="orderName" ng-model="vm.order.brand.brandName" ng-disabled="true" required> -->
               </div>
               <div class="form-group col-lg-6 col-md-6">
                 <label for="Model">Model</label>
-                <select id="model" ng-model="vm.order.model" class="form-control" ng-options="model.modelId as model.modelName for model in vm.modelDetail"></select>
+                <select id="model" ng-model="vm.order.model" class="form-control" ng-options="model.modelId as model.modelName for model in vm.modelDetail" ng-if="vm.dirtyCheck"></select>
+               <input type="text" class="form-control" id="orderName" ng-model="vm.order.model.modelName" ng-if="!vm.dirtyCheck" ng-disabled="true" required>
+
               </div>
               <div class="form-group col-lg-6 col-md-6">
                 <label for="Quantity">Quantity</label>
@@ -50,7 +56,7 @@
             </form>
         </div>
         <div class="modal-footer">
-            <button class="btn btn-primary" type="button" ng-click="vm.ok()" ng-disabled="!Order.$valid">Save</button>
+            <button class="btn btn-primary" type="button" ng-click="vm.updateStock()" ng-disabled="!Order.$valid">Update</button>
             <button class="btn btn-warning" type="button" ng-click="vm.cancel()">Cancel</button>
         </div>
 </div>
