--- a/GB-WEB/Webcontent/GB/app/layout/screens/modal/addSellOrder.tmpl.html
+++ b/GB-WEB/Webcontent/GB/app/layout/screens/modal/addSellOrder.tmpl.html
@@ -40,6 +40,15 @@
                 <label for="amount">Amount</label>
                  <input type="number" class="form-control" id="amount" ng-model="vm.order.amount">
               </div>
+              <div class="form-group col-md-6">
+              <label for="Quantity">Order Date</label>
+                <div class="input-group">
+                  <input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="vm.order.sellDate" is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" />
+                  <span class="input-group-btn">
+                    <button type="button" class="btn btn-default" ng-click="open1()"><i class="glyphicon glyphicon-calendar"></i></button>
+                  </span>
+                </div>
+              </div>
             </form>
         </div>
         <div class="modal-footer">
